@@ -1,3 +1,7 @@
+2005-04-03  Mark D. Baushke  <mdb@cvshome.org>
+
+	* strtol.c: Update from GNULIB.
+
 2005-03-29  Mark D. Baushke  <mdb@cvshome.org>
 
 	* mktime.c, strftime.c: Update from GNULIB.
